--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/httpclient_autohome?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+url=jdbc:mysql://127.0.0.1:3306/httpclient_autohome?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC&allowMultiQueries=true
 username=root
 password=123456
