--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,12 @@
 		    <artifactId>ibatis-core</artifactId>
 		    <version>3.0</version>
 		</dependency>
-        
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.4</version>
+		</dependency>
 		
 	</dependencies>
 </project>
